--- a/themes/gophercon/layouts/section/sponsors.html
+++ b/themes/gophercon/layouts/section/sponsors.html
@@ -1,81 +1,66 @@
 {{ partial "header.html" . }}
 {{ partial "navbar.html" . }}
-<main class="container generic">
-    <section class="row"> 
-    	<div class="sponsors col-md-9">
-        	{{ range .Data.Pages }}
-				{{ if eq "diamond"  .Params.sponsorclass}} 	
-        	<!---------- Diamond Sponsors ---------->
-            <div class="col-md-12 diamond">
-            	<img class="icon" src="/images/diamond.png" />
-				<h3>Diamond Sponsors</h3>
-				<a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
-                <div class="clearfix"></div>
-            </div><!-- Diamond Sponsors End -->
-              {{end}}
-		   {{ end }}
-
-			{{ range .Data.Pages }}
-				{{ if eq "platinum"  .Params.sponsorclass}} 	
-            <!---------- Platinum Sponsors ---------->
-            <div class="col-md-12 platinum">
-            	<img class="icon" src="/images/platinum.png" />
-                <h3>Platinum Sponsors</h3>
-				<a href="{{.Permalink}}"><img src="{{ .Params.logo }}" /></a>
-                <div class="clearfix"></div>
-            </div><!-- Platinum Sponsors End -->
-            	{{end}}
-			{{ end }}
-		{{ range .Data.Pages }}
-			{{ if eq "gold"  .Params.sponsorclass}} 	
-            <!---------- Gold Sponsors ---------->
-            <div class="col-md-12 gold">
-                <img class="icon" src="/images/gold.png" />
-                <h3>Gold Sponsors</h3>
-				<a href="{{.Permalink}}"><img src="{{ .Params.logo }}" /></a>
-                <div class="clearfix"></div>
-            </div><!-- Gold Sponsors End -->
-            	{{end}}
-			{{ end }}
-				{{ range .Data.Pages }}
-				{{ if eq "silver"  .Params.sponsorclass}} 	
-            <!---------- Silver Sponsors ---------->
-            <div class="col-md-12 silver">
-                <img class="icon" src="/images/silver.png" />
-                <h3>Silver Sponsors</h3>
-				<a href="{{.Permalink}}"><img src="{{ .Params.logo }}" /></a>
-                <div class="clearfix"></div>
-            </div><!-- Silver Sponsors End -->
-        	   {{end}}
-		    {{ end }}
-			{{ range .Data.Pages }}
-			{{ if eq "bronze"  .Params.sponsorclass}} 	
-            <!---------- Bronze Sponsors ---------->
-            <div class="col-md-12 bronze">
-                <img class="icon" src="/images/bronze.png" />
-                <h3>Bronze Sponsors</h3>
-				<a href="{{.Permalink}}"><img src="{{ .Params.logo }}" /></a>
-                <div class="clearfix"></div>
-            </div><!-- Bronze Sponsors End -->
-            {{end}}
-			{{ end }}
-			{{ range .Data.Pages }}
-			{{ if eq "additional"  .Params.sponsorclass}} 	
-            <!---------- Additional Sponsors ---------->
-            <div class="col-md-12 bronze">
-                <img class="icon" src="/images/sponsor.png" />
-                <h3>Additional Sponsors</h3>
-				<a href="{{.Permalink}}"><img src="{{ .Params.logo }}" /></a>
-                <div class="clearfix"></div>
-            </div><!-- Additional Sponsors End -->
-            {{end}}
-		{{ end }}
-
-        </div><!-- sponsors col-md-10 -->
-        
-        {{ partial "sidebar.html" . }}
-    </section>
-</main>
+<section class="row"> 
+  <main class="container generic">
+    <div class="col-md-9 main">
+      <div class="row">
+        <h2>Diamond Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "diamond"  .Params.sponsorclass}} 	
+            <div class="col-md-4 diamond">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
+      <hr>
+      <div class="row">
+        <h2>Platinum Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "platinum"  .Params.sponsorclass}} 	
+            <div class="col-md-4 platinum">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
+      <hr>
+      <div class="row">
+        <h2>Gold Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "gold"  .Params.sponsorclass}} 	
+            <div class="col-md-4 gold">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
+      <hr>
+      <div class="row">
+        <h2>Silver Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "silver"  .Params.sponsorclass}} 	
+            <div class="col-md-4 silver">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
+      <hr>
+      <div class="row">
+        <h2>Bronze Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "bronze"  .Params.sponsorclass}} 	
+            <div class="col-md-4 bronze">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
+    </div>
+    {{ partial "sidebar.html" . }}
+  </main>
+</section>
 
 
 {{ partial "footer.html" . }}
