update google logo, apcera -> nats, and add pindrop

--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -53,7 +53,7 @@
 
             <div class="row">
               <div class="col-sm-12 gold-sponsors">
-                <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 text-center">
+                <div class="col-md-2 col-sm-2 text-center">
                   <div class="sponsor">
                     <a href="https://www.minio.io/">
                       <img alt="Minio" src="/2016/img/sponsors/gold/minio.png">
@@ -89,6 +89,14 @@
                   <div class="sponsor">
                     <a href="http://pivotal.io/">
                       <img alt="Pivotal" src="/2016/img/sponsors/gold/pivotal.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="http://pindrop.com/">
+                      <img alt="Pivotal" src="/2016/img/sponsors/gold/pindrop.png">
                     </a>
                   </div>
                 </div>
@@ -194,8 +202,8 @@
 
                 <div class="col-md-1 col-sm-1 text-center">
                   <div class="sponsor">
-                    <a href="http://www.apcera.com/">
-                      <img alt="Apcera" src="/2016/img/sponsors/bronze/apcera.png">
+                    <a href="http://www.nats.io/">
+                      <img alt="NATS" src="/2016/img/sponsors/bronze/nats.png">
                     </a>
                   </div>
                 </div>
