small schedule tweaks

--- a/themes/gophercon/layouts/partials/schedule/11july.html
+++ b/themes/gophercon/layouts/partials/schedule/11july.html
@@ -19,7 +19,7 @@
                     <div id="general-schedule-11july" class="schedule-tab schedule-item-tab active tab-pane">
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">12:00pm - 6:00pm</span>
+                          <span class="time">08:00am - 6:00pm</span>
                           <span class="location">Grand Concourse</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
@@ -30,27 +30,16 @@
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">12:00am - 6:00pm</span>
-                          <span class="location">Exhibit Hall</span>
-                        </div>
-                        <div class="col-md-9 schedule-item-details">
-                          <div class="schedule-item-summary">
-                            <span class="title">Sponsor/Exhibitor Move-in</span>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row schedule-item">
-                        <div class="col-md-3 schedule-item-slot">
                           <span class="time">6:00pm (tentative)</span>
                           <span class="location">To be announced</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">GopherCon 2016 Kickoff Party</span>
+                            <span class="title">GopherCon 2016 Party</span>
                           </div>
                           <div class="abstract">
-                            <p>Join the Denver Go Meetup group to kickoff Gophercon 2016 in style! </p>
-                            <p><a href="http://www.meetup.com/Denver-Go-Language-User-Group/events/229341754/">Event Details</a></p>
+                            <p>The Official GopherCon After-Party hosted by our Diamond Sponsors</p>
+                            <p>Details coming soon!</p>
                           </div>
                         </div>
                       </div>
