--- a/themes/gophercon/layouts/sponsor/single.html
+++ b/themes/gophercon/layouts/sponsor/single.html
@@ -1,12 +1,12 @@
 {{ partial "header.html" . }}
 {{ partial "navbar.html" . }}
 <section class="row"> 
-  <main class="container generic">
-    	<div class="sponsors col-md-8">
+    <main class="container generic">
+    	<div class="sponsors col-md-12">
 
 			{{ if eq "diamond"  .Params.sponsorclass}}
         	<!---------- Diamond Sponsors ---------->
-            <div class="col-md-12 diamond">
+            <div class="col-md-12">
             	<img class="icon" src="/images/diamond.png" />
                 <h3>Diamond Sponsor</h4>
 				<a href="{{.Params.site}}"><img src="{{.Params.logo}}" /></a>
@@ -16,7 +16,7 @@
 			{{ end }} 
 			{{ if eq "platinum"  .Params.sponsorclass}}
 			<!---------- Platinum Sponsors  -->
-            <div class="col-md-12 platinum">
+            <div class="col-md-12">
             	<img class="icon" src="/images/platinum.png" />
                 <h4>Platinum Sponsor</h4>
 				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
@@ -25,7 +25,7 @@
             </div>
 			{{ end }} 
            {{ if eq "gold"  .Params.sponsorclass}}
-            <div class="col-md-12 gold">
+            <div class="col-md-12">
                 <img class="icon" src="/images/gold.png" />
                 <h3>Gold Sponsor</h3>
 				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
@@ -34,7 +34,7 @@
             </div>
 			{{ end }} 
      		{{ if eq "silver"  .Params.sponsorclass}} 			
-            <div class="col-md-12 silver">
+            <div class="col-md-12">
                 <img class="icon" src="/images/silver.png" />
                 <h3>Silver Sponsor</h3>
 				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
@@ -43,7 +43,7 @@
             </div>
 			{{ end }} 
             {{ if eq "bronze"  .Params.sponsorclass}} 	
-            <div class="col-md-12 bronze">
+            <div class="col-md-12">
                 <img class="icon" src="/images/bronze.png" />
                 <h3>Bronze Sponsor</h3>
 				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
@@ -52,7 +52,7 @@
 			</div>
 			{{ end }}
             {{ if eq "additional"  .Params.sponsorclass}} 	
-            <div class="col-md-12 bronze">
+            <div class="col-md-12">
                 <img class="icon" src="/images/sponsor.png" />
                 <h3>Additional Sponsors</h3>
 				<a href="{{.Params.site}}"><img src="{{.Params.logo}}"/></a>
@@ -61,7 +61,7 @@
 			</div>
 			{{ end }}
         </div><!-- sponsors col-md-10 -->
-  </main>
+    </main>
 </section>
 
 
