Adding backplane as a partial and to the sponsors

--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -139,11 +139,18 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-12 gold-sponsors">
-                <div class="col-md-2 col-md-offset-5 col-sm-2 col-sm-offset-5 text-center">
+              <div class="col-sm-12 silver-sponsors">
+                <div class="col-md-2 col-md-offset-4 col-sm-2 col-sm-offset-5 text-center">
                   <div class="sponsor">
                     <a href="https://www.yikyak.com/home/">
                       <img alt="YikYak" src="/2016/img/sponsors/silver/yikyak.png" style="">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.backplane.io/">
+                      <img alt="Backplane" src="/2016/img/sponsors/silver/backplane.png" style="max-width: 180px; margin-top: -5px">
                     </a>
                   </div>
                 </div>
