--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -177,6 +177,14 @@
 
                 <div class="col-md-1 col-sm-1 text-center">
                   <div class="sponsor">
+                    <a href="http://www.redventures.com/">
+                      <img alt="Netflix" src="/2016/img/sponsors/bronze/redventures.jpg" style="margin-left: -8px">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-1 col-sm-1 text-center">
+                  <div class="sponsor">
                     <a href="http://www.intel.com/">
                       <img alt="Intel" src="/2016/img/sponsors/bronze/intel.png" style="max-height: 40px">
                     </a>
