Enable Hampton and Homewood

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -256,7 +256,7 @@
                   </p>
 
 									<div class="hotel-link text-link">
-                    <a href="#">Sold Out!</a>
+                    <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/D/DENCVHX-GOP-20160707/index.jhtml">Book Now</a>
                   </div>
 								</div>
 							</div>
@@ -272,7 +272,7 @@
                     Denver, CO 80202
                   </p>
 									<div class="hotel-link text-link">
-                    <a href="#">Sold Out!</a>
+                    <a href="http://homewoodsuites.hilton.com/en/hw/groups/personalized/D/DENDCHW-GOP-20160707/index.jhtml">Book Now</a>
                   </div>
 								</div>
 							</div>
