makes schedule a toplevel page with navbar link
On the main page the schedule is way down below all the speakers and it
seems to me like people aren't finding it.  Add it as a link in the
navbar and make it its own toplevel page at /schedule.

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -32,6 +32,7 @@
                   <li><a class="inner-link" href="/code-of-conduct">Code of Conduct</a></li>
                   <li><a class="inner-link" href="/speakers">Speakers</a></li>
                   <li><a class="inner-link" href="/sessions">Sessions</a></li>
+                  <li><a class="inner-link" href="/schedule">Schedule</a></li>
                   <li><a class="inner-link" href="/sponsors">Sponsors</a></li>
 								</ul>
 								<div class="mobile-menu-toggle"><i class="icon icon_menu"></i></div>
