--- a/themes/gophercon/layouts/partials/schedule.html
+++ b/themes/gophercon/layouts/partials/schedule.html
@@ -1,5 +1,10 @@
-    <section class="content schedule">
-        <div class="container">
+    <section id="schedule" class="content schedule">
+      <div class="container">
+          <div class="row">
+            <div class="col-sm-12">
+              <h1>Schedule</h1>
+            </div>
+          </div>
           <div class="row">
             <div class="col-md-10 col-md-offset-1 text-center">
               <ul class="nav nav-tabs schedule-days">
