--- a/themes/gophercon/layouts/section/schedule.html
+++ b/themes/gophercon/layouts/section/schedule.html
@@ -1,23 +1,11 @@
 {{ partial "header.html" . }}
 
+<body>
+  {{ partial "navbar.html" . }}
+  <div class="main-container">
+    {{ partial "schedule.html" . }}
+  </div>
 
-<main class="container generic">
-    <section class="row"> 
-        <div class="col-md-8">
-          <h2>Schedule</h2>
-          {{ range (.Data.Pages).Reverse }}
-            <h3><a href="{{ .RelPermalink }}">{{ .Title }}</a></h3>
-            <small>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</small><br/><br/>
-            {{ .Summary }}
-            {{ if .Truncated }} <br/><br/>
-            <a class="readmore" href="{{ .RelPermalink }}">Read More <i class="fa fa-arrow-circle-right"></i></a>
-            {{ end }}
-          {{ end }}
-        </div>
-
-    </section>
-</main>
-<main>
   {{ partial "sponsors.html" . }}
-</main>
+
 {{ partial "footer.html" . }}
