Adding digital ocean as a diamond sponsor

--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -8,10 +8,17 @@
 
             <div class="row">
               <div class="col-sm-12 diamond-sponsors">
-                <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 text-center">
+                <div class="col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2 text-center">
                   <div class="sponsor">
                     <a href="http://www.google.com/">
                       <img alt="Google" src="/2016/img/sponsors/diamond/google.png">
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-4 col-sm-4 text-center">
+                  <div class="sponsor">
+                    <a href="http://www.digitalocean.com/">
+                      <img alt="Digital Ocean" src="/2016/img/sponsors/diamond/digitalocean.png">
                     </a>
                   </div>
                 </div>
