--- a/themes/gophercon/layouts/section/sponsors.html
+++ b/themes/gophercon/layouts/section/sponsors.html
@@ -1,28 +1,62 @@
 {{ partial "header.html" . }}
 {{ partial "navbar.html" . }}
-{{ $pages := .Data.Pages }}
 <section class="row"> 
   <main class="container generic">
     <div class="col-md-9 main">
-      {{ range $pages }}
-        {{ if isset .Params "sponsorlevels" }} 
-          {{ range $i, $sponsorlevel := .Params.sponsorlevels }}
-          {{ if gt $i 0 }}
-          <hr>
-          {{ end }}
-          <div class="row">
-            <h2>{{ $sponsorlevel | title}} Sponsors</h2>
-            {{ range $pages }}
-              {{ if eq $sponsorlevel .Params.sponsorclass}} 	
-                <div class="col-md-4 {{ $sponsorlevel }}">
-                  <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
-                </div>
-              {{ end }}
-            {{ end }}
-          </div>
+      <div class="row">
+        <h2>Diamond Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "diamond"  .Params.sponsorclass}} 	
+            <div class="col-md-4 diamond">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
           {{ end }}
         {{ end }}
-      {{ end }}
+      </div>
+      <hr>
+      <div class="row">
+        <h2>Platinum Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "platinum"  .Params.sponsorclass}} 	
+            <div class="col-md-4 platinum">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
+      <hr>
+      <div class="row">
+        <h2>Gold Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "gold"  .Params.sponsorclass}} 	
+            <div class="col-md-4 gold">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
+      <hr>
+      <div class="row">
+        <h2>Silver Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "silver"  .Params.sponsorclass}} 	
+            <div class="col-md-4 silver">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
+      <hr>
+      <div class="row">
+        <h2>Bronze Sponsors</h2>
+        {{ range .Data.Pages }}
+          {{ if eq "bronze"  .Params.sponsorclass}} 	
+            <div class="col-md-4 bronze">
+              <a href="{{ .Permalink}}"><img src="{{ .Params.logo }}" /></a>
+            </div>
+          {{ end }}
+        {{ end }}
+      </div>
     </div>
     {{ partial "sidebar.html" . }}
   </main>
