Resize gophercon logo to something more useful

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -16,7 +16,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-2">
-								<img alt="Logo" class="logo logo-dark" src="2016/img/gophercon2016-2.png">
+								<img alt="Logo" class="logo logo-dark" src="2016/img/gophercon2016.png">
 							</div>
 					
 							<div class="col-md-10 text-right">
@@ -52,7 +52,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-                    <img alt="logo" class="logo" src="2016/img/gophercon2016-2.png">
+                    <img alt="logo" class="logo" src="2016/img/gophercon2016.png">
 									  <span class="uppercase text-white">July 11th to 13th - Colorado Convention Center<br>Denver, Colorado</span>
                     <h1 class="large-h1 text-white">Largest event in the world dedicated to the Go programming language.</h1>
                   </div>
