--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -250,7 +250,7 @@
                   </p>
 
 									<div class="hotel-link text-link">
-                    <a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/D/DENCVHX-GOP-20160707/index.jhtml">Book Now</a>
+                    <a href="#">Sold Out!</a>
                   </div>
 								</div>
 							</div>
@@ -266,7 +266,7 @@
                     Denver, CO 80202
                   </p>
 									<div class="hotel-link text-link">
-                    <a href="http://homewoodsuites.hilton.com/en/hw/groups/personalized/D/DENDCHW-GOP-20160707/index.jhtml">Book Now</a>
+                    <a href="#">Sold Out!</a>
                   </div>
 								</div>
 							</div>
@@ -298,7 +298,7 @@
                     Denver, CO 80202
                   </p>
 									<div class="hotel-link text-link">
-                    <a href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/D/DENDDGI-GOPHER-20160708/index.jhtml?WT.mc_id=POG">Book Now</a>
+                    <a href="#">Sold Out!</a>
                   </div>
 								</div>
 							</div>
