Hyatt also sold out

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -282,7 +282,7 @@
                     Denver, CO 80202
                   </p>
 									<div class="hotel-link text-link">
-                    <a href="http://denverdowntown.place.hyatt.com/en/hotel/home.html?corp_id=G-GO16">Book Now</a>
+                    <a href="#">Sold Out!</a>
                   </div>
 								</div>
 							</div>
