--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -18,12 +18,37 @@
     
         <div class="col-md-10 text-right">
           <ul class="menu">
+            <li class="has-dropdown">
+              <a href="#">About</a>
+              <ul class="nav-dropdown">
+                <li><a href="/location">Location</a></li>
+                <li><a class="inner-link" href="/code-of-conduct">Code of Conduct</a></li>
+              </ul>
+            </li>
             <li><a class="inner-link" href="https://ti.to/gophercon/gophercon-2016">Tickets</a></li>
-            <li><a class="inner-link" href="/code-of-conduct">Code of Conduct</a></li>
-            <li><a class="inner-link" href="/speakers">Speakers</a></li>
-            <li><a class="inner-link" href="/sessions">Sessions</a></li>
-            <li><a class="inner-link" href="/schedule">Schedule</a></li>
-            <li><a class="inner-link" href="/sponsors">Sponsors</a></li>
+            <li class="has-dropdown">
+              <a href="#">Events</a>
+              <ul class="nav-dropdown">
+                <li><a class="inner-link" href="/events/afterparty">After Party</a></li>
+                <li><a class="inner-link" href="/events/preparty">Kick Off Party</a></li>
+              </ul>
+            </li>
+            <li class="has-dropdown">
+              <a href="#">Schedule</a>
+              <ul class="nav-dropdown">
+                <li><a class="inner-link" href="/schedule">Schedule</a></li>
+                <li><a class="inner-link" href="/speakers">Speakers</a></li>
+                <li><a class="inner-link" href="/sessions">Sessions</a></li>
+              </ul>
+            </li>
+            <li class="has-dropdown">
+              <a href="#">Sponsors</a>
+              <ul class="nav-dropdown">
+                
+                <li><a class="inner-link" href="/sponsors">GopherCon Sponsors</a></li>
+                <li><a class="inner-link" href="/Gophercon2016Prospectus.pdf">Sponsorship Prospectus</a></li>
+              </ul>
+            </li>
           </ul>
           <div class="mobile-menu-toggle"><i class="icon icon_menu"></i></div>
         </div>
