--- a/themes/gophercon/layouts/partials/schedule/12july.html
+++ b/themes/gophercon/layouts/partials/schedule/12july.html
@@ -59,7 +59,7 @@
                       {{ partial "schedule/intermission.html" (dict "purpose" "Break" "sessiontime" "11:20am - 11:40am" )}}
 
                       {{ range $sessions }}
-                        {{ if eq .Params.speaker "womuya" }}
+                        {{ if eq .Params.speaker "jcarlosnieto" }}
                           {{ partial "schedule/session.html" (dict "session" . ) }}
                         {{ end }}
                       {{ end }}
