add digital ocean as platinum sponsor

--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -17,7 +17,7 @@
                 </div>
               </div>
               <div class="col-sm-12 platinum-sponsors">
-                <div class="col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 text-center">
+                <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 text-center">
                   <div class="sponsor">
                     <a href="http://www.twitch.tv/">
                       <img alt="Twitch" src="/2016/img/sponsors/platinum/twitch.png">
@@ -45,6 +45,14 @@
                   <div class="sponsor">
                     <a href="https://www.ardanlabs.com/">
                       <img alt="Ardan labs" src="/2016/img/sponsors/platinum/ardan.png">
+                    </a>
+                  </div>
+                </div>
+
+                <div class="col-md-2 col-sm-2 text-center">
+                  <div class="sponsor">
+                    <a href="https://www.digitalocean.com/">
+                      <img alt="Digital Ocean" src="/2016/img/sponsors/platinum/digitalocean.png">
                     </a>
                   </div>
                 </div>
