--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -61,7 +61,7 @@
 
             <div class="row">
               <div class="col-sm-12 gold-sponsors">
-                <div class="col-md-2 col-sm-2 text-center">
+                <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1 text-center">
                   <div class="sponsor">
                     <a href="https://www.minio.io/">
                       <img alt="Minio" src="/2016/img/sponsors/gold/minio.png">
