changing name of workshops from Hardcore Go to Ultimate Go

--- a/themes/gophercon/layouts/partials/schedule/10july.html
+++ b/themes/gophercon/layouts/partials/schedule/10july.html
@@ -5,7 +5,7 @@
                       <a data-toggle="tab" href="#registration-schedule">General</a>
                     </li>
                     <li role="presentation" class="">
-                      <a data-toggle="tab" href="#hardcore-go-schedule">Hardcore Go Workshop</a>
+                      <a data-toggle="tab" href="#ultimate-go-schedule">Ultimate Go Workshop</a>
                     </li>
                     <li role="presentation" class="">
                       <a data-toggle="tab" href="#advanced-go-schedule">Advanced Go Workshop</a>
@@ -54,7 +54,7 @@
                         </div>
                       </div>
                     </div>
-                    <div id="hardcore-go-schedule" class="schedule-tab schedule-item-tab tab-pane ">
+                    <div id="ultimate-go-schedule" class="schedule-tab schedule-item-tab tab-pane ">
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">7:30am - 9:30am</span>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
-                            <span class="title">Hardcore Go Workshop</span>
+                            <span class="title">Ultimate Go Workshop</span>
                             <div class="speaker">
                               <span class="name">TBD</span>
                               <span class="designation">Ardan Labs</span>
@@ -108,7 +108,7 @@
                           <img src="/images/temp-logos/ardan.png" width="100" />
                         </div>
                         <div class="col-md-9">
-                          <p>The Hardcore Go Workshop is an all day workshop to get you up and running with Go provided by
+                          <p>The Ultimate Go Workshop is an all day workshop to get you up and running with Go provided by
                             <a href="https://ardanlabs.com">Ardan Labs.</a>Tickets for this workshop can be purchased at an additional cost.</p>
                           <a href="https://ti.to/gophercon/gophercon-2016" class="btn btn-orange"
                           target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a>
