Add After-Party details to schedule

--- a/themes/gophercon/layouts/partials/schedule/10july.html
+++ b/themes/gophercon/layouts/partials/schedule/10july.html
@@ -40,8 +40,8 @@
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">6:00pm (tentative)</span>
-                          <span class="location">To be announced</span>
+                          <span class="time">6:00pm</span>
+                          <span class="location">Wynkoop Brewing Company</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
