--- a/themes/gophercon/layouts/partials/schedule/11july.html
+++ b/themes/gophercon/layouts/partials/schedule/11july.html
@@ -29,8 +29,8 @@
                       </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
-                          <span class="time">6:00pm (tentative)</span>
-                          <span class="location">To be announced</span>
+                          <span class="time">8:00pm - 11:00pm</span>
+                          <span class="location">Punch Bowl Social</span>
                         </div>
                         <div class="col-md-9 schedule-item-details">
                           <div class="schedule-item-summary">
@@ -38,7 +38,7 @@
                           </div>
                           <div class="abstract">
                             <p>The Official GopherCon After-Party hosted by our Diamond Sponsors</p>
-                            <p>Details coming soon!</p>
+                            <p>Details are available here: <a href="/events/afterparty">GopherCon After-Party</a></p>
                           </div>
                         </div>
                       </div>
