add additional hotels

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -327,6 +327,39 @@
                   </div>
 								</div>
 							</div>
+
+							<div class="col-md-3 col-sm-6">
+								<div class="info-box">
+                  <div class="hotel-price"><strong>$220</strong><small> / night, plus tax</small></div>
+									<img alt="Embassy Suites" src="2016/img/hotels/embassysuites.jpg">
+                  <div class="hotel-note">7/13/16 checkout only</div>
+                  <h3 class="hotel-name">Embassy Suites<span class="hotel-phone">800.445.8667</span></h3>
+                  <div class="hotel-code">Code: GopherCon</div>
+									<p class="hotel-address">
+										1420 Stout Street,<br>
+                    Denver, CO 80202
+                  </p>
+									<div class="hotel-link text-link">
+                    <a href="#">Please Call!</a>
+                  </div>
+								</div>
+							</div>
+
+							<div class="col-md-3 col-sm-6">
+								<div class="info-box">
+                  <div class="hotel-price"><strong>$220</strong><small> / night, plus tax</small></div>
+									<img alt="Aloft Denver Downtown" src="2016/img/hotels/aloft.jpg">
+                  <h3 class="hotel-name">Aloft Downtown<span class="hotel-phone">877.462.5638</span></h3>
+                  <div class="hotel-code">Code: GopherCon</div>
+									<p class="hotel-address">
+                    800 15th Street, Denver,<br>
+                    Denver, CO 80202
+                  </p>
+									<div class="hotel-link text-link">
+                    <a href="#">Please Call!</a>
+                  </div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
