tutorial 1 and tutorial 2 now have rooms

--- a/themes/gophercon/layouts/partials/schedule/11july.html
+++ b/themes/gophercon/layouts/partials/schedule/11july.html
@@ -8,10 +8,10 @@
                       <a data-toggle="tab" href="#main-theater-11july">Main Theater</a>
                     </li>
                     <li role="presentation" class="">
-                      <a data-toggle="tab" href="#tutorial-1-11july">Tutorial 1</a>
+                      <a data-toggle="tab" href="#tutorial-1-11july">Room: 501-504</a>
                     </li>
                     <li role="presentation" class="">
-                      <a data-toggle="tab" href="#tutorial-2-11july">Tutorial 2</a>
+                      <a data-toggle="tab" href="#tutorial-2-11july">Room: 505-507</a>
                     </li>
                   </ul>
                   <div class="tab-content">
