--- a/themes/gophercon/layouts/partials/schedule/12july.html
+++ b/themes/gophercon/layouts/partials/schedule/12july.html
@@ -9,10 +9,10 @@
                       <a data-toggle="tab" href="#main-theater-12july">Main Theater</a>
                     </li>
                     <li role="presentation" class="">
-                      <a data-toggle="tab" href="#tutorial-1-12july">Tutorial 1</a>
+                      <a data-toggle="tab" href="#tutorial-1-12july">Room: 501-504</a>
                     </li>
                     <li role="presentation" class="">
-                      <a data-toggle="tab" href="#tutorial-2-12july">Tutorial 2</a>
+                      <a data-toggle="tab" href="#tutorial-2-12july">Room: 505-507</a>
                     </li>
                   </ul>
                   <div class="tab-content">
