Updating hotel note for Embassy

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -334,7 +334,7 @@
 								<div class="info-box">
                   <div class="hotel-price"><strong>$220</strong><small> / night, plus tax</small></div>
 									<img alt="Embassy Suites" src="2016/img/hotels/embassysuites.jpg">
-                  <div class="hotel-note">7/13/16 checkout only</div>
+                  <div class="hotel-note">With checkout on or before 7/13/16</div>
                   <h3 class="hotel-name">Embassy Suites<span class="hotel-phone">800.445.8667</span></h3>
                   <div class="hotel-code">Code: GopherCon</div>
 									<p class="hotel-address">
