Add registration link for Aloft

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -358,7 +358,7 @@
                     Denver, CO 80202
                   </p>
 									<div class="hotel-link text-link">
-                    <a href="#">Please Call!</a>
+                    <a href="https://www.starwoodmeeting.com/events/start.action?id=1606155922&key=1F509B11">Book Now!</a>
                   </div>
 								</div>
 							</div>
