Fixing Ivan's name

--- a/themes/gophercon/layouts/partials/schedule/11july.html
+++ b/themes/gophercon/layouts/partials/schedule/11july.html
@@ -78,7 +78,7 @@
                         {{ end }}
                       {{ end }}
                       {{ range $sessions }}
-                        {{ if eq .Params.speaker "idanyliuk" }}
+                        {{ if eq .Params.speaker "idaniluk" }}
                           {{ partial "schedule/session.html" (dict "session" . ) }}
                         {{ end }}
                       {{ end }}
