--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -257,7 +257,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-12">
-								<h1>Hotel Accomodations</h1>
+								<h1>Hotel Accommodations</h1>
 							</div>
 						</div>
 				
