Add new reservation link to Embassy Suites

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -342,7 +342,7 @@
                     Denver, CO 80202
                   </p>
 									<div class="hotel-link text-link">
-                    <a href="#">Please Call!</a>
+                    <a href="http://embassysuites.hilton.com/en/es/groups/personalized/D/DENESES-GOP-20160708/index.jhtml">Book Now!</a>
                   </div>
 								</div>
 							</div>
