--- a/themes/gophercon/layouts/partials/schedule.html
+++ b/themes/gophercon/layouts/partials/schedule.html
@@ -1,4 +1,5 @@
     <section id="schedule" class="content schedule">
+	    <a name="schedule"></a>
       <div class="container">
           <div class="row">
             <div class="col-sm-12">
