Add warning at the top of workshop schedule in addition to the bottom to make it very clear you need a separate ticket for the workshops

--- a/themes/gophercon/static/2016/css/main.css
+++ b/themes/gophercon/static/2016/css/main.css
@@ -170,3 +170,8 @@
   text-align: left;
   margin: 25px;
 }
+
+.schedule .workshop-warning span.title {
+  color: rgba(255, 40, 40, 1);
+  font-weight: 400;
+}
