--- a/themes/gophercon/layouts/partials/schedule/10july.html
+++ b/themes/gophercon/layouts/partials/schedule/10july.html
@@ -55,6 +55,13 @@
                       </div>
                     </div>
                     <div id="ultimate-go-schedule" class="schedule-tab schedule-item-tab tab-pane ">
+                      <div class="row schedule-item workshop-warning">
+                        <div class="col-md-12 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">*Not included with General Admission, requires a separate ticket.</span>
+                          </div>
+                        </div>
+                      </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">7:30am - 9:30am</span>
@@ -117,6 +124,13 @@
                       </div>
                     </div>
                     <div id="advanced-go-schedule" class="schedule-tab schedule-item-tab tab-pane">
+                      <div class="row schedule-item workshop-warning">
+                        <div class="col-md-12 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">*Not included with General Admission, requires a separate ticket.</span>
+                          </div>
+                        </div>
+                      </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">7:30am - 9:30am</span>
@@ -181,6 +195,13 @@
                       </div>
                     </div>
                     <div id="building-api-schedule" class="schedule-tab schedule-item-tab tab-pane">
+                      <div class="row schedule-item workshop-warning">
+                        <div class="col-md-12 schedule-item-details">
+                          <div class="schedule-item-summary">
+                            <span class="title">*Not included with General Admission, requires a separate ticket.</span>
+                          </div>
+                        </div>
+                      </div>
                       <div class="row schedule-item">
                         <div class="col-md-3 schedule-item-slot">
                           <span class="time">7:30am - 9:30am</span>
