--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -295,7 +295,7 @@
                     <a href="#">Sold Out!</a>
                   </div>
 								</div>
-							</div>
+              </div> -->
 					
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
@@ -308,11 +308,12 @@
                     Denver, CO 80202
                   </p>
 									<div class="hotel-link text-link">
-                    <a href="#">Sold Out!</a>
+                    <a href="http://denverdowntown.place.hyatt.com/en/hotel/home.html?corp_id=G-GO16">Book Now</a>
                   </div>
 								</div>
 							</div>
 
+              <!--
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$189</strong><small> / night, plus tax</small></div>
@@ -330,7 +331,7 @@
 							</div>
               -->
 
-							<div class="col-md-4 col-sm-6">
+							<!-- <div class="col-md-4 col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$220</strong><small> / night, plus tax</small></div>
 									<img alt="Embassy Suites" src="2016/img/hotels/embassysuites.jpg">
@@ -345,7 +346,7 @@
                     <a href="http://embassysuites.hilton.com/en/es/groups/personalized/D/DENESES-GOP-20160708/index.jhtml">Book Now!</a>
                   </div>
 								</div>
-							</div>
+                </div> -->
 
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
