Removing Hyatt Place

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -295,7 +295,7 @@
                     <a href="#">Sold Out!</a>
                   </div>
 								</div>
-              </div> -->
+              </div>
 					
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
@@ -313,7 +313,6 @@
 								</div>
 							</div>
 
-              <!--
 							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$189</strong><small> / night, plus tax</small></div>
@@ -329,9 +328,8 @@
                   </div>
 								</div>
 							</div>
-              -->
 
-							<!-- <div class="col-md-4 col-sm-6">
+							<div class="col-md-4 col-sm-6">
 								<div class="info-box">
                   <div class="hotel-price"><strong>$220</strong><small> / night, plus tax</small></div>
 									<img alt="Embassy Suites" src="2016/img/hotels/embassysuites.jpg">
