Add Guide Program to website

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -26,6 +26,7 @@
                       <ul class="nav-dropdown">
                         <li><a href="/location">Location</a></li>
                         <li><a class="inner-link" href="/code-of-conduct">Code of Conduct</a></li>
+                        <li><a href="/guide-program">Guide Program</a></li>
                       </ul>
                     </li>
                     <li><a class="inner-link" href="https://ti.to/gophercon/gophercon-2016">Tickets</a></li>
